# Stock-Price-Predictor-Project

./: .gitignore  CONTRIBUTING  LICENSE  README.md
Project Files/: CMakeLists.txt  data_extraction.cpp  data_extraction.h  main.cpp  stock_price_downloader.cpp  stock_price_downloader.h
